# OptiLite

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  vite.config.ts
.github/: TAGS_AND_RELEASE.md
.github/workflows/: ci-cd.yml
src/: App.tsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  DiskOptimizer.tsx  OptimizationPanel.tsx  ProcessMonitor.tsx  Settings.tsx
src/styles/: App.css  global.css
