[package]
name = "optilite"
version = "1.0.0"
description = "OptiLite - Open Source System Optimizer"
authors = ["OptiLite Team"]
license = "MIT"
repository = "https://github.com/OptiLite/OptiLite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "os-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
windows = { version = "0.52", features = [
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
