[package]
name = "optilite"
version = "1.0.0"
description = "OptiLite - Open Source System Optimizer"
authors = ["OptiLite Team"]
license = "MIT"
repository = "https://github.com/OptiLite/OptiLite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "os-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "winbase"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
